--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/movie_theater_db?serverTimezone=UTC
-db.user=root
-db.password=nikita199
+db.driver=YOUR_DRIVER
+db.url=YOUR_URL
+db.user=YOUR_LOGIN
+db.password=YOUR_PASSWORD
 
 #Hibernate properties
 hibernate.show_sql=true
